tests/paczka1/small_fuzzy/90981799.err
Error in line 2: nuYvlvkS6C7 A905 95,0
Error in line 14: A538 A905 -2,6
